--- a/gb/21/8/19/n13171988.md
+++ b/gb/21/8/19/n13171988.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ufisoc353/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ufisoc353/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ufisoc353/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ufisoc353/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ufisoc353/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ufisoc353/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ufisoc353/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ufisoc353/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ufisoc353/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ufisoc353/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ufisoc353/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ufisoc353/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ufisoc353/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ufisoc353/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ufisoc353/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ufisoc353/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ufisoc353/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ufisoc353/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ufisoc353/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ufisoc353/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ufisoc353/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ufisoc353/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ufisoc353/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ufisoc353/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ufisoc353/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ufisoc353/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ufisoc353/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ufisoc353/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ufisoc353/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ufisoc353/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ufisoc353/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ufisoc353/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ufisoc353/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ufisoc353/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ufisoc353/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ufisoc353/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ufisoc353/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ufisoc353/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ufisoc353/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ufisoc353/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ufisoc353/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ufisoc353/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ufisoc353/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ufisoc353/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ufisoc353/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ufisoc353/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ufisoc353/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>一文看懂中共为何与塔利班交好</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/08/id13168047-000_9L874B-600x400.jpg" />
 <h6>2021年8月16日，阿富汗喀布尔（Kabul），塔利班武装分子接管阿富汗之后，阿富汗居民急于逃离，许多民众聚集在机场。(Wakil Kohsar/AFP)
 </h6>
 <hr>
-	<p>【大纪元2021年08月19日讯】（大纪元记者骆亚、龙腾云采访报导）自7月初美国宣布将从<ahref="https://github.com/ufisoc353/djy/blob/master/gb/tag/%E9%98%BF%E5%AF%8C%E6%B1%97.md#1">阿富汗</a>全面撤军后，<ahref="https://github.com/ufisoc353/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E6%94%BF%E6%9D%83.md#1">中共政权</a>与阿富汗极端组织<ahref="https://github.com/ufisoc353/djy/blob/master/gb/tag/%E5%A1%94%E5%88%A9%E7%8F%AD.md#1">塔利班</a>的关系急速升温，不但于7月底高调接待来访的塔利班代表团，并在国内为塔利班进行“洗白”。大纪元对此特邀专家剖析中共与塔利班之间的关系，以及未来的局势。</p>
-<h2>解析中共匆忙拥抱<ahref="https://github.com/ufisoc353/djy/blob/master/gb/tag/%E5%A1%94%E5%88%A9%E7%8F%AD.md#1">塔利班</a>的目的</h2>
-<figure id="attachment_13172028" aria-describedby="caption-attachment-13172028" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/08/id13172028-b32fd675fc034b045b7a72e8e517e18f.jpg"><img class="size-large wp-image-13172028" src="https://i.epochtimes.com/assets/uploads/2021/08/id13172028-b32fd675fc034b045b7a72e8e517e18f-600x399.jpg" alt="" width="600" b="399" /></a><figcaption id="caption-attachment-13172028" class="wp-caption-text">7月28日中共外长王毅会见来访的<ahref="https://github.com/ufisoc353/djy/blob/master/gb/tag/%E9%98%BF%E5%AF%8C%E6%B1%97.md#1">阿富汗</a>塔利班政治委员会负责人巴拉达尔一行。（中共外交部官网截图）</figcaption></figure>
+	<p>【大纪元2021年08月19日讯】（大纪元记者骆亚、龙腾云采访报导）自7月初美国宣布将从<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E9%98%BF%E5%AF%8C%E6%B1%97.md#1">阿富汗</a>全面撤军后，<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E6%94%BF%E6%9D%83.md#1">中共政权</a>与阿富汗极端组织<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%A1%94%E5%88%A9%E7%8F%AD.md#1">塔利班</a>的关系急速升温，不但于7月底高调接待来访的塔利班代表团，并在国内为塔利班进行“洗白”。大纪元对此特邀专家剖析中共与塔利班之间的关系，以及未来的局势。</p>
+<h2>解析中共匆忙拥抱<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E5%A1%94%E5%88%A9%E7%8F%AD.md#1">塔利班</a>的目的</h2>
+<figure id="attachment_13172028" aria-describedby="caption-attachment-13172028" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/08/id13172028-b32fd675fc034b045b7a72e8e517e18f.jpg"><img class="size-large wp-image-13172028" src="https://i.epochtimes.com/assets/uploads/2021/08/id13172028-b32fd675fc034b045b7a72e8e517e18f-600x399.jpg" alt="" width="600" b="399" /></a><figcaption id="caption-attachment-13172028" class="wp-caption-text">7月28日中共外长王毅会见来访的<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E9%98%BF%E5%AF%8C%E6%B1%97.md#1">阿富汗</a>塔利班政治委员会负责人巴拉达尔一行。（中共外交部官网截图）</figcaption></figure>
 <p>7月底中共与来访的塔利班互相承诺，令外界怀疑中共或会很快就承认塔利班为合法政权。资深时事评论员唐靖远对此表示认同，“这种可能性是存在的，而且还不低。”</p>
 <p>他认为，“王毅7月份在天津非常高调的会见塔利班来访人员，其实就是在未雨绸缪，因为塔利班在7月就已经表示出可能夺取政权的趋势。所以那时候中共就是在提前做舆论上的铺垫。”</p>
 <p>唐靖远分析说，“众所周知塔利班是一个恐怖组织，那中共为何不怕名声受损，也要这么高调地与它交好？中共其实是有两个目的。”</p>
-<p>“一个是未雨绸缪。塔利班一旦掌权，中共就会成为第一批承认塔利班政权的，中共可能会觉得掌握了主动，能够换取在中亚地带、在阿富汗周边，特别是在新疆问题上与塔利班达成政治上的交易，为其镇压新疆维族人提供便利。另外一个目的是在中亚地带推行<ahref="https://github.com/ufisoc353/djy/blob/master/gb/tag/%E4%B8%80%E5%B8%A6%E4%B8%80%E8%B7%AF.md#1">一带一路</a>计划，中共需要塔利班为其在巴基斯坦的中巴经济走廊提供安全保障。”</p>
+<p>“一个是未雨绸缪。塔利班一旦掌权，中共就会成为第一批承认塔利班政权的，中共可能会觉得掌握了主动，能够换取在中亚地带、在阿富汗周边，特别是在新疆问题上与塔利班达成政治上的交易，为其镇压新疆维族人提供便利。另外一个目的是在中亚地带推行<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%B8%80%E5%B8%A6%E4%B8%80%E8%B7%AF.md#1">一带一路</a>计划，中共需要塔利班为其在巴基斯坦的中巴经济走廊提供安全保障。”</p>
 <p>美国“信息与战略研究所”学者李恒青也认为，中共押宝塔利班的目的是希望拉拢塔利班，“一个是中共看准塔利班可能会得势，同时不希望塔利班最后变成维吾尔人和塔吉克人，去跟东突运动建立联系。”“另一个是借机打击美国。我认为美国在阿富汗撤军这件事情上做得可能不太妥当，所以给了中共、俄罗斯这些敌对国家可乘之机。所以中共现在宣传美国是一个不负责任的国家，打击美国的形象。”</p>
 <h2>透视中共和塔利班的未来</h2>
 <p>对于中共与塔利班交好的未来，唐靖远并不看好。</p>
@@ -48,48 +48,48 @@
 <p>但在今年7月之前，中共与塔利班组织的关系并不平和。</p>
 <p>早在11年前，2010年1月阿富汗塔利班就曾在北部法利亚布省绑架了两名中国工程师。</p>
 <p>在过去10多年中，阿富汗塔利班在邻国巴基斯坦的关联组织——巴基斯坦塔利班曾经多次绑架、袭击中国人。</p>
-<p>最新案例发生在今年7月14日，中国葛洲坝集团在巴基斯坦的通勤班车遭遇自杀式汽车炸弹袭击，一辆班车坠入山崖，造成至少九名中国工人死亡，另有28名中国公民受伤。巴基斯坦政府称袭击是巴基斯坦塔利班所为。葛洲坝集团在巴基斯坦的工程，是中共“<ahref="https://github.com/ufisoc353/djy/blob/master/gb/tag/%E4%B8%80%E5%B8%A6%E4%B8%80%E8%B7%AF.md#1">一带一路</a>”核心项目——中巴经济走廊的一部分。</p>
+<p>最新案例发生在今年7月14日，中国葛洲坝集团在巴基斯坦的通勤班车遭遇自杀式汽车炸弹袭击，一辆班车坠入山崖，造成至少九名中国工人死亡，另有28名中国公民受伤。巴基斯坦政府称袭击是巴基斯坦塔利班所为。葛洲坝集团在巴基斯坦的工程，是中共“<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E4%B8%80%E5%B8%A6%E4%B8%80%E8%B7%AF.md#1">一带一路</a>”核心项目——中巴经济走廊的一部分。</p>
 <p>责任编辑：叶梓明#</p>
 	
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ufisoc353/djy/blob/master/gb/21/8/17/n13168833.md#1">分析：塔利班掌权后 与伊朗和中共关系微妙</a></li>
-<li><a href="https://github.com/ufisoc353/djy/blob/master/gb/21/8/20/n13174800.md#1">中国厂商抢注韩国商标 品牌侵权纠纷频发</a></li>
-<li><a href="https://github.com/ufisoc353/djy/blob/master/gb/21/8/20/n13175086.md#1">联合国文件：塔利班搜捕曾助北约阿富汗人</a></li>
-<li><a href="https://github.com/ufisoc353/djy/blob/master/gb/21/8/19/n13173977.md#1">【独家】文件泄朝鲜枪击中国渔民 扣渔船</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/21/8/17/n13168833.md#1">分析：塔利班掌权后 与伊朗和中共关系微妙</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753127.md#1">俄军导弹袭击基辅 莫斯科：摧毁国外捐赠坦克</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/6/n13753095.md#1">美韩发射8枚导弹 秀精准打击能力回呛朝鲜</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752865.md#1">普京：若美向乌提供远程导弹 将打击新目标</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/3/n10112268.md#1" target="_blank">林辉：红色公主的大字报让军报少将家破人亡</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/7/13/n8093984.md#1" target="_blank">袁斌：绝症病孩得新生，法轮功太神奇了！</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/29/n11011288.md#1" target="_blank">林辉：西安军事叛变前夜毛收到张杨密电</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/11/n11377666.md#1" target="_blank">平凡人不凡的修炼经历</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ufisoc353/djy/blob/master/gb/21/8/13/n13159580.md#1">游历地狱23分钟 美国男子著书披露见闻</a></li>
-<li><a href="https://github.com/ufisoc353/djy/blob/master/gb/21/8/15/n13163430.md#1">军机与民航机在加拿大上空目击绿色UFO</a></li>
-<li><a href="https://github.com/ufisoc353/djy/blob/master/gb/21/4/23/n12899456.md#1">【命理】妇人虐死继子 自己儿子遭报应</a></li>
-<li><a href="https://github.com/ufisoc353/djy/blob/master/gb/21/7/24/n13112860.md#1">她从婴儿的哭声中 听到了家族灭亡的命运</a></li>
-<li><a href="https://github.com/ufisoc353/djy/blob/master/gb/21/8/13/n13161080.md#1">【未解之谜】我的前世  是安妮?弗兰克</a></li>
-<li><a href="https://github.com/ufisoc353/djy/blob/master/gb/21/8/19/n13173710.md#1">【微视频】台湾不是阿富汗 中美关系回归911前？</a></li>
-<li><a href="https://github.com/ufisoc353/djy/blob/master/gb/21/8/19/n13174430.md#1">【秦鹏直播】阿富汗陷大混乱 中共再洗白塔利班</a></li>
-<li><a href="https://github.com/ufisoc353/djy/blob/master/gb/21/8/19/n13173953.md#1">【直播】国务院记者会及五角大楼谈阿富汗局势</a></li>
-<li><a href="https://github.com/ufisoc353/djy/blob/master/gb/21/8/18/n13169506.md#1">分析：中共提“三次分配” 均贫富风暴来临</a></li>
-<li><a href="https://github.com/ufisoc353/djy/blob/master/gb/21/8/17/n13169054.md#1">【新闻看点】2天干掉8虎内幕 习近平加速清障</a></li>
-<li><a href="https://github.com/ufisoc353/djy/blob/master/gb/21/8/18/n13171775.md#1">【远见快评】习“劫富”新政 四大关键问题</a></li>
-<li><a href="https://github.com/ufisoc353/djy/blob/master/gb/21/8/17/n13168987.md#1">否认追17岁落选港姐 周星驰曾自曝未婚原因</a></li>
-<li><a href="https://github.com/ufisoc353/djy/blob/master/gb/21/8/18/n13169426.md#1">李若彤庆55岁生日 感恩被叫“姑姑”26年</a></li>
-<li><a href="https://github.com/ufisoc353/djy/blob/master/gb/21/8/18/n13171388.md#1">户头一度只剩26港元 郑欣宜明年可领母亲遗产</a></li>
-<li><a href="https://github.com/ufisoc353/djy/blob/master/gb/21/8/17/n13169183.md#1">邓超探班孙俪秀恩爱 赵又廷俨然成电灯泡</a></li>
-<li><a href="https://github.com/ufisoc353/djy/blob/master/gb/21/8/17/n13167416.md#1">黄秋生门下台湾10星曝光 谢佳见等名列表演班</a></li>
-<li><a href="https://github.com/ufisoc353/djy/blob/master/gb/21/8/17/n13167697.md#1">韩男网购二手冰箱 底部惊现上亿韩圆钞票</a></li>
-<li><a href="https://github.com/ufisoc353/djy/blob/master/gb/21/8/18/n13169849.md#1">奇特画面：塔利班分子持枪在游乐园玩碰碰车</a></li>
-<li><a href="https://github.com/ufisoc353/djy/blob/master/gb/21/8/18/n13170213.md#1">英国小猫一直叫 救了跌落深谷的8旬老妇</a></li>
-<li><a href="https://github.com/ufisoc353/djy/blob/master/gb/21/8/19/n13173007.md#1">为什么喂鸭子吃面包会害了它们？</a></li>
-<li><a href="https://github.com/ufisoc353/djy/blob/master/gb/21/8/16/n13166271.md#1">老药新用抗新冠！4大“A级药物”一次看</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746033.md#1">【探索时分】四大理由 中共应向俄罗斯开战？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752163.md#1">深圳前市长陈如桂落马 传有三大原因</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/2/n13751276.md#1">好莱坞明星强尼戴普诽谤案胜诉 台主播发感言</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ufisoc353/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ufisoc353/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/8/19/n13171988.htm">一文看懂中共为何与塔利班交好</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/8/19/n13171988.htm">一文看懂中共为何与塔利班交好</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ufisoc353/djy/blob/master/gb/21/8/19/n13171988.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ufisoc353/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufisoc353/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ufisoc353/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ufisoc353/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ufisoc353/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufisoc353/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ufisoc353/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufisoc353/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ufisoc353/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufisoc353/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ufisoc353/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufisoc353/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ufisoc353/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufisoc353/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ufisoc353/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufisoc353/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ufisoc353/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufisoc353/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ufisoc353/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufisoc353/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ufisoc353/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufisoc353/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ufisoc353/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufisoc353/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ufisoc353/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufisoc353/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ufisoc353/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufisoc353/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ufisoc353/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufisoc353/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ufisoc353/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufisoc353/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ufisoc353/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufisoc353/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ufisoc353/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufisoc353/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ufisoc353/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufisoc353/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ufisoc353/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufisoc353/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ufisoc353/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufisoc353/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ufisoc353/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufisoc353/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ufisoc353/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufisoc353/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ufisoc353/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ufisoc353/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/21/8/19/n13171988.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
